# BundleFusion_Ubuntu_Pangolin

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  pangolin_fix.h  run_docker.sh  zParametersBundlingDefault.txt  zParametersBundlingLige.txt  zParametersDefault.txt  zParametersDefaultLige.txt
docker/: build-dokcer-image.bash  dockerfile  run-docker-container.bash
example/: bundle_fusion_example.cpp
include/: BundleFusion.h  Bundler.h  CUDACache.h  CUDACacheUtil.h  CUDACameraUtil.h  CUDAImageCalibrator.h  CUDAImageManager.h  CUDAImageUtil.h  ConditionManager.h  DualGPU.h  GlobalAppState.h  GlobalBundlingState.h  GlobalDefines.h  OnlineBundler.h  PoseHelper.h  PrimeSenseSensor.h  RGBDSensor.h  SBA.h  SBALie.h  SBA_CPU.h  SBA_param.h  SensorDataReader.h  SolverUtil.h  TimingLog.h  TrajectoryManager.h  mLib.h  mLibCuda.h  stdafx.h
include/DepthSensing/: CUDADepthCameraParams.h  CUDAHistogramHashSDF.h  CUDAImageHelper.h  CUDAMarchingCubesHashSDF.h  CUDARayCastParams.h  CUDARayCastSDF.h  CUDAScan.h  CUDASceneRepChunkGrid.h  CUDASceneRepHashSDF.h  DepthCameraUtil.h  MarchingCubesSDFUtil.h  RayCastSDFUtil.h  TimingLogDepthSensing.h  Util.h  VoxelUtilHashSDF.h
include/FreeImage/FreeImage/: FreeImage.h
include/FreeImage/include/: Kinect.INPC.h  Kinect.h
include/SiftGPU/: MatrixConversion.h  SIFTImageManager.h  SIFTMatchFilter.h  SiftCameraParams.h  SiftGPU.h  SiftMatch.h  SiftPyramid.h  cudaUtil.h  cuda_EigenValue.h  cuda_SVD.h  cuda_SimpleMatrixUtil.h  cuda_another_svd.h  cuda_kabsch.h  cuda_kabschReference.h  cuda_surfaceArea.h  cuda_svd3.h  vtkMath.h
include/Solver/: CUDASolverBundling.h  ICPUtil.h  LieDerivUtil.h  SolverBundlingDenseUtil.h  SolverBundlingEquations.h  SolverBundlingEquationsLie.h  SolverBundlingParameters.h  SolverBundlingState.h  SolverBundlingUtil.h
include/Visualization/: Output3DWrapper.h  PangolinOutputWrapper.h
include/cutil/: conio.h
include/cutil/Uplink/: blobs.h  blobs.hpp  camera-calibration.h  camera-calibration.hpp  camera-fixedparams.h  camera-fixedparams.hpp  camera-frame.h  camera-frame.hpp  camera-pose.h  camera-pose.hpp  clients.h  clients.hpp  context.h  context.hpp  desktop-server.h  desktop-server.hpp  desktop-ui.h  desktop-ui.hpp  discovery.h  discovery.hpp  endpoints.h  endpoints.hpp  image-codecs.h  image-codecs.hpp  image.h  image.hpp  message.h  message.hpp  messages.h  messages.hpp  motion.h  (+12 more)
src/: BundleFusion.cpp  Bundler.cpp  CUDACache.cpp  CUDACache.cu  CUDAImageManager.cpp  CUDAImageUtil.cu  ConditionManager.cpp  CorrespondenceEvaluator.cpp  OnlineBundler.cpp  OnlineBundler.cu  PangolinOutputWrapper.cpp  PangolinOutputWrapper.cu  PrimeSenseSensor.cpp  RGBDSensor.cpp  SBA.cpp  SBA.cu  SBA_CPU.cpp  SensorDataReader.cpp  TimingLog.cpp  TrajectoryManager.cpp  mLib.cpp  stdafx.cpp  uplink.cpp
src/DepthSensing/: CUDAHistogramHashSDF.cu  CUDAMarchingCubesHashSDF.cpp  CUDAMarchingCubesSDF.cu  CUDARayCastSDF.cpp  CUDARayCastSDF.cu  CUDASceneRepChunkGrid.cpp  CUDASceneRepChunkGrid.cu  CUDASceneRepHashSDF.cpp  CUDASceneRepHashSDF.cu  CameraUtil.cu  TimingLogDepthSensing.cpp
src/SiftGPU/: CUDASiftConstant.cu  GlobalUtil.cpp  ProgramCU.cu  SIFTImageManager.cpp  SIFTImageManager.cu  SIFTMatchFilter.cpp  SiftGPU.cpp  SiftMatch.cpp  SiftPyramid.cpp  vtkMath.cxx
src/Solver/: CUDASolverBundling.cpp  SolverBundling.cu
(+59 files in other folders)
